--- a/src/css/main.css
+++ b/src/css/main.css
@@ -100,28 +100,30 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  width: 1440px;
+  width: 1600px;
   min-width: 1440px;
-  height: 90%;
+  height: 85%;
   padding: 10px;
   border-radius: 15px;
   background-color: rgb(34, 34, 34);
 }
 
 .main-content {
-  position: relative;
-  display: flex;
-  gap: 50px;
   width: 100%;
   height: 100%;
-  border: 3px solid white;
-  border-radius: 15px;
-  padding: 20px;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-position: top;
   background-image: url(http://bit.ly/2gPLxZ4);
+}
+
+.login-after {
+  position: relative;
+  display: none;
+  gap: 50px;
+  border-radius: 15px;
+  padding: 20px;
 }
 
 /* 로그인 */
@@ -139,6 +141,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 15px;
+  z-index: 10;
 }
 
 .login-popup .popup__profile {
@@ -318,6 +321,124 @@ body {
 /* luck */
 .luck-wrapper {
   margin-top: 100px;
+}
+
+.luck-contents {
+  height: 300px;
+  display: flex;
+  padding: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: beige;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+
+.dice {
+  position: relative;
+  width: 100px;
+  height: 100px;
+}
+
+.side {
+  width: 100%;
+  height: 100%;
+  background: #092756;
+  border: 2px solid black;
+  position: absolute;
+  opacity: 0.7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.side:before {
+  content: "";
+  width: 20%;
+  height: 20%;
+  background: black;
+  border-radius: 50%;
+}
+
+.two:before {
+  background: transparent;
+  box-shadow: #000 -25px -25px 0px 0px, #000 25px 25px 0px 0px;
+}
+
+.three:before {
+  box-shadow: #000 -25px 25px 0px 0px, #000 25px -25px 0px 0px;
+}
+
+.four:before {
+  background: transparent;
+  box-shadow: #000 -25px 25px 0px 0px, #000 -25px -25px 0px 0px,
+    #000 25px 25px 0px 0px, #000 25px -25px 0px 0px;
+}
+
+.five:before {
+  box-shadow: #000 -25px -25px 0px 0px, #000 -25px 25px 0px 0px,
+    #000 25px -25px 0px 0px, #000 25px 25px 0px 0px;
+}
+
+.six:before {
+  background: transparent;
+  box-shadow: #000 -25px -25px 0px 0px, #000 -25px 0px 0px 0px,
+    #000 -25px 25px 0px 0px, #000 25px -25px 0px 0px, #000 25px 0px 0px 0px,
+    #000 25px 25px 0px 0px;
+}
+
+/* 3d */
+.dice {
+  transform-style: preserve-3d;
+  transform: rotateY(185deg) rotateX(150deg) rotateZ(315deg);
+}
+
+.dice .one {
+  transform: translateZ(50px);
+}
+
+.dice .six {
+  transform: translateZ(-50px);
+}
+
+.dice .two {
+  transform: translateX(-50px) rotateY(-90deg);
+}
+
+.dice .five {
+  transform: translateX(50px) rotateY(90deg);
+}
+
+.dice .three {
+  transform: translateY(50px) rotateX(90deg);
+}
+
+.dice .four {
+  transform: translateY(-50px) rotateX(90deg);
+}
+
+.luck-result {
+  display: none;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  gap: 40px;
+}
+
+.dice-result {
+  position: relative;
+  width: 100px;
+  height: 100px;
+}
+
+.dice-result .side {
+  opacity: 1;
+}
+
+.luck-msg {
+  white-space: nowrap;
+  font-size: 23px;
 }
 
 /* bottom */
