--- a/src/css/main.css
+++ b/src/css/main.css
@@ -322,6 +322,11 @@ body {
   margin-top: 100px;
 }
 
+.luck-desc {
+  font-size: 20px;
+  margin-bottom: 50px;
+}
+
 .luck-contents {
   height: 300px;
   display: flex;
